Centralise version in platform